<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Love 2 Brew</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hotcoffee">Hot Coffee</string>
    <string name="coldcoffee">Cold Coffee</string>
    <string name="title_activity_tabbed_brewer">TabbedBrewer</string>
    <string name="title_activity_tabview">Coffee Brewer</string>
    <string name="title_section1">Overview</string>
    <string name="title_section2">Facts</string>
    <string name="title_section3">How It Works</string>
    <string name="title_section4">Steps</string>
    <string name="ninetysec">90 Sec Reminder</string>
    <string name="twentyfour">24Hr Cold Brew</string>
    <string name="twelvehour">12Hr Cold Brew</string>
    <string name="fivemin">5 Min Reminder</string>
    <string name="history">History</string>
    <string name="howworks">How it Works</string>
    <string name="steps">Steps</string>
    <string name="overview">Overview</string>
    <string name="select">Select a Coffee Brewing Technique to Learn About\n</string>

</resources>
