<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/grd"
    android:columnCount="3"
    android:background="@drawable/coffeebkg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/select"
        android:textSize="@dimen/activity_font_top_port"
        android:layout_columnSpan="2"
        android:textColor="#ddaa3508"
        android:textStyle="bold" />

    <TextView android:text="@string/hotcoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:textStyle="bold"
        android:textColor="#ddaa3508"
        android:textSize="@dimen/activity_font_sub_port" />

    <Spinner
        android:id="@+id/spnHot"
        android:layout_gravity="fill_horizontal"/>

    <TextView android:text="@string/coldcoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_row="2"
        android:textColor="#ddaa3508"
        android:textSize="@dimen/activity_font_sub_port" />

    <Spinner
        android:id="@+id/spnCold"
        android:layout_gravity="fill_horizontal"/>



</GridLayout>
